--- a/wiki/PlanningAuthoritiesR.wiki
+++ b/wiki/PlanningAuthoritiesR.wiki
@@ -7,7 +7,7 @@
 || || *Restormel* || St. Austell || searchable by date || http://www.restormel.gov.uk/index.cfm?articleid=11668 ||
 || || *Rhondda Cynnon Taf County* || Pontypridd || weekly lists as pdf - a bit behind || http://www.rhondda-cynon-taff.gov.uk/stellent/groups/public/documents/hcst/content.hcst?lang=en&textonly=false&xNodeID=608 ||
 || || *Ribble Valley* || Clitheroe || weekly lists as pdf || http://www.ribblevalley.gov.uk/site/scripts/documents_info.php?documentID=386&pageNumber=1 ||
-|| || *Richmond (London Borough)* || Richmond || searchable by date || http://www2.richmond.gov.uk/PlanData2/Planning_Search.aspx ||
+|| Done || Richmond (London Borough) || Richmond || PHP scraper by Matt || http://www2.richmond.gov.uk/PlanData2/Planning_Search.aspx ||
 || Done || Richmondshire District Council || Richmond || PublicAccess || http://publicaccess.richmondshire.gov.uk/publicaccess/ ||
 || Done || Rochdale || Rochdale || [SwiftLG] || http://www.rochdale.gov.uk/swiftlg/apas/run/wphappcriteria.display ||
 || Done || Rochford || Rochford || PublicAccess || http://www.rochford.gov.uk/PublicAccess/ ||
