Edited wiki page through web user interface.

--- a/wiki/PlanningAuthoritiesH.wiki
+++ b/wiki/PlanningAuthoritiesH.wiki
@@ -1,5 +1,5 @@
 || Done ||  Hackney Borough Council || London || PlanningExplorer (we now have two scrapers for Hackney, one in python, and one in PHP) || http://www.hackney.gov.uk/servapps/mvm/online/pl/GeneralSearch.aspx ||
-||  || *Halton Borough Council* || Runcorn || searchable by date || http://www.halton.gov.uk/planningapps/ ||
+|| Done || Halton Borough Council || Runcorn || Custom Scraper || http://www.halton.gov.uk/planningapps/ ||
 || Done || Hambleton District Council || Northallerton || PublicAccess (works for php scraper but not the python one) || http://planning.hambleton.gov.uk/publicaccess/tdc/DcApplication/application_searchform.aspx ||
 || Done || Hammersmith & Fulham Borough Council || London || PublicAccess || http://www.apps.lbhf.gov.uk/PublicAccess/tdc/DcApplication/application_searchform.aspx ||
 ||  || *Hampshire County Council* || Winchester || online in html, but no date search || http://www3.hants.gov.uk/planning/mineralsandwaste/planning-applications/applications.htm ||
