Edited wiki page through web user interface.

--- a/wiki/ExistingScrapers.wiki
+++ b/wiki/ExistingScrapers.wiki
@@ -31,6 +31,7 @@ Others:
   * Forest of Dean
   * Glasgow (from Peter)
   * Halton (no satisfactory info url)
+  * Hampshire
   * Harrow (no satisfactory info url)
   * Highland (from Peter)
   * Hounslow
