--- a/wiki/PlanningAuthoritiesH.wiki
+++ b/wiki/PlanningAuthoritiesH.wiki
@@ -15,7 +15,7 @@
 || Done || Havant Borough Council || Havant || AcolNet || http://www3.havant.gov.uk/scripts/planningpages/acolnetcgi.exe?ACTION=UNWRAP&RIPNAME=Root.pgesearch&theme= ||
 || Done || Havering Borough Council || Romford || [Ocella] || http://lxop01.havering.gov.uk:7783/portal/page?_pageid=33,30979&_dad=portal&_schema=PORTAL ||
 ||  || *Herefordshire Council* || Hereford || searchable by date || http://www.herefordshire.gov.uk/gis/planQuery.aspx ||
-||  || *Hertfordshire County Council* || Hertford || waste and minerals only, not online || http://www.hertsdirect.org/yrccouncil/hcc/env/hdp/ ||
+||  || *Hertfordshire County Council* || Hertford || waste and minerals only. These are online in HTML, but unless I am mistaken, the council are deliberately obscuring part of the reference no. || http://www.hertsdirect.org/envroads/environment/plan/planningapps/planningappsbranch/ ||
 || Done || Hertsmere Borough Council || Borehamwood || AcolNet ||  http://www2.hertsmere.gov.uk/ACOLNET/DCOnline//acolnetcgi.gov?ACTION=UNWRAP&RIPNAME=Root.pgesearch ||
 || Done || High Peak Borough Council || Glossop || ApplicationSearchServlet || http://planning.highpeak.gov.uk/portal/servlets/ApplicationSearchServlet ||
 || Done || Highland Council || Dingwall, Dornoch, etc || weekly lists as pdf - perl scraper from Peter || http://www.highland.gov.uk/yourenvironment/planning/planningapplicationsandbuildingwarrants/weekly-planning-bw-lists.htm ||
