--- a/wiki/ExistingScrapers.wiki
+++ b/wiki/ExistingScrapers.wiki
@@ -26,6 +26,7 @@ Others:
   * Brentwood (from Peter)
   * Broxbourne - Tom's Scraper
   * Enfield (Now using the SwiftLG scraper)
+  * Exmoor
   * Fife
   * Flintshire (the site has now completely changed, so we're starting from scratch, I think)
   * Forest of Dean
