--- a/wiki/ExistingScrapers.wiki
+++ b/wiki/ExistingScrapers.wiki
@@ -26,6 +26,7 @@ Others:
   * Brentwood (from Peter)
   * Broxbourne - Tom's Scraper
   * Enfield (Now using the SwiftLG scraper)
+  * Eastbourne (Info and comment urls don't work because you can't get to them without a cookie)
   * Exmoor
   * Fife
   * Flintshire (the site has now completely changed, so we're starting from scratch, I think)
