--- a/wiki/PlanningExplorer.wiki
+++ b/wiki/PlanningExplorer.wiki
@@ -23,6 +23,7 @@ Done, and working:
   * Stockport
   * Tamworth
   * Trafford
+  * Waltham Forest
 
 A few have no postcodes. In some cases they provide OSGB, which we should probably use instead.
 
@@ -30,7 +31,3 @@ A few have no postcodes. In some cases they provide OSGB, which we should probab
   * Forest Heath (no postcodes)
   * South Norfolk (appears to have WAM as well) (No postcodes - but has OSGB coords)
   * West Oxfordshire (no postcodes)
-
-These ones are not yet done:
-
-  * Waltham Forest (currently giving an error)
