--- a/wiki/ExistingScrapers.wiki
+++ b/wiki/ExistingScrapers.wiki
@@ -56,6 +56,7 @@ Others:
   * Walsall - Paul's Scraper
   * Wealden - PHP scraper from Matt
   * Westminster
+  * West Dorset
   * Wiltshire - PHP scraper from Matt
   * York
 
