--- a/wiki/PlanningAuthoritiesK.wiki
+++ b/wiki/PlanningAuthoritiesK.wiki
@@ -6,6 +6,6 @@
 || Done || King's Lynn & West Norfolk Borough Council || King's Lynn || PublicAccess || http://online.west-norfolk.gov.uk/publicaccess/tdc/DcApplication/application_searchform.aspx ||
 || Done || Kingston upon Hull City Council || Hull || PublicAccess || http://web.hullcc.gov.uk/publicaccess/tdc/DcApplication/application_searchform.aspx || 
 || Done || Kingston uponThames Borough Council || Kingston upon Thames || Custom Scraper || http://maps.kingston.gov.uk/planning/planning_search.aspx ||
-||  || *Kirklees Metropolitan Council* || Huddersfield || searchable by date || 	http://www.kirklees.gov.uk/business/planning/planning.asp ||
+|| Done || Kirklees Metropolitan Council || Huddersfield || Custom Scraper || 	http://www.kirklees.gov.uk/business/planning/planning.asp ||
 || Done || Knowsley Metropolitan Borough Council || Huyton || PublicAccess || http://publicaccess.knowsley.gov.uk/PublicAccess/tdc/DcApplication/application_searchform.aspx ||
 	
