Edited wiki page through web user interface.

--- a/wiki/ExistingScrapers.wiki
+++ b/wiki/ExistingScrapers.wiki
@@ -43,6 +43,7 @@ Others:
   * Isle of Wight
   * Kensington and Chelsea
   * Kingston upon Thames
+  * Kirklees
   * Maldon (and Pendle)
   * Medway
   * Newport (from Peter)
