Edited wiki page through web user interface.

--- a/wiki/PlanningAuthoritiesK.wiki
+++ b/wiki/PlanningAuthoritiesK.wiki
@@ -2,7 +2,7 @@
 || Done || Kensington & Chelsea Borough Council || London || Custom Scraper (seems to be related to AcolNet) || http://www.rbkc.gov.uk/Planning/scripts/weeklyform.asp || 
 ||  || *Kent County Council* || Maidstone || weekly lists as pdf || http://www.kent.gov.uk/publications/environment/weekly-planning-list.htm ||
 || Done || Kerrier District Council || Camborne || PublicAccess || || ||
-||  || *Kettering Borough Council* || Kettering || weekly list, search facility without date || http://www.kettering.gov.uk/site/scripts/planning_list.php?weeklyList=true ||
+||  || *Kettering Borough Council* || Kettering || *No Postcodes*. Weekly list, search facility without date || http://www.kettering.gov.uk/site/scripts/planning_list.php?weeklyList=true ||
 || Done || King's Lynn & West Norfolk Borough Council || King's Lynn || PublicAccess || http://online.west-norfolk.gov.uk/publicaccess/tdc/DcApplication/application_searchform.aspx ||
 || Done || Kingston upon Hull City Council || Hull || PublicAccess || http://web.hullcc.gov.uk/publicaccess/tdc/DcApplication/application_searchform.aspx || 
 || Done || Kingston uponThames Borough Council || Kingston upon Thames || Custom Scraper || http://maps.kingston.gov.uk/planning/planning_search.aspx ||
