Edited wiki page through web user interface.

--- a/wiki/ExistingScrapers.wiki
+++ b/wiki/ExistingScrapers.wiki
@@ -44,6 +44,7 @@ Others:
   * Kensington and Chelsea
   * Kingston upon Thames
   * Kirklees
+  * Leicestershire
   * Maldon (and Pendle)
   * Medway
   * Newport (from Peter)
