Edited wiki page through web user interface.

--- a/wiki/ExistingScrapers.wiki
+++ b/wiki/ExistingScrapers.wiki
@@ -25,6 +25,7 @@ Others:
   * Brent
   * Brentwood (from Peter)
   * Broxbourne - Tom's Scraper
+  * Cairngorms
   * Enfield (Now using the SwiftLG scraper)
   * Eastbourne (Info and comment urls don't work because you can't get to them without a cookie)
   * Exmoor
