--- a/wiki/PlanningAuthoritiesC.wiki
+++ b/wiki/PlanningAuthoritiesC.wiki
@@ -1,6 +1,6 @@
 || Done || Caerphilly || Caerphilly County Borough Council || PublicAccess || http://publicaccess.caerphilly.gov.uk/PublicAccess/tdc/DcApplication/application_searchform.aspx ||
 || Done || Cairngorms || || Custom Scraper || http://www.cairngorms.co.uk/planning/e-planning/index.php ||
-|| || *Calderdale* ||  Calderdale Metropolitan Borough Council ||search by date, also last  7 days as html || http://www.calderdale.gov.uk/environment/planning/search-applications/index.jsp ||
+|| Done || Calderdale ||  Calderdale Metropolitan Borough Council || Custom Scraper || http://www.calderdale.gov.uk/environment/planning/search-applications/index.jsp ||
 || Done || Cambridge ||  Cambridge City Council || PublicAccess|| http://www.cambridge.gov.uk/publicaccess/tdc/tdc_home.aspx ||
 || Done || Cambridgeshire ||  Cambridgeshire County Council || AcolNet *(few postcodes, and mostly partial)* || http://planapps.cambridgeshire.gov.uk/scripts/acolnet/acolnetcgi.exe? ||
 || Done || Camden ||  London Borough of Camden || PlanningExplorer, and [WAM] - we now have a scraper for each || http://www.camden.gov.uk/ccm/navigation/environment/planning-and-built-environment ||
