Edited wiki page through web user interface.

--- a/wiki/ExistingScrapers.wiki
+++ b/wiki/ExistingScrapers.wiki
@@ -25,6 +25,7 @@ Others:
   * Brent
   * Brentwood (from Peter)
   * Broxbourne - Tom's Scraper
+  * Broxtowe
   * Cairngorms
   * Calderdale
   * Enfield (Now using the SwiftLG scraper)
