Edited wiki page through web user interface.

--- a/wiki/ExistingScrapers.wiki
+++ b/wiki/ExistingScrapers.wiki
@@ -50,6 +50,7 @@ Others:
   * Leicestershire
   * Maldon (and Pendle)
   * Medway
+  * Mendip
   * Newport (from Peter)
   * North Ayrshire (from Peter)
   * Redbridge (from Peter)
