--- a/wiki/PlanningAuthoritiesW.wiki
+++ b/wiki/PlanningAuthoritiesW.wiki
@@ -25,7 +25,7 @@
 || Done || West Sussex County Council || Chichester || AtriumePlanning || http://eplanning.westsussex.gov.uk/ePlanningOPS/searchPageLoad.do ||
 || Done || West Wiltshire District Council || Trowbridge || PublicAccess || http://planning.westwiltshire.gov.uk/publicaccess/ ||
 || Done || Westminster City Council || LONDON || There's a [WAM], but it's broken (probably old). There's a PublicAccess, but it doesn't contain everything. Using a custom scraper. || http://www3.westminster.gov.uk/planningapplications/currentsearch-form.cfm ||
-||  || *Weymouth & Portland Borough Council* || Weymouth || Info and post pages can only be accessed by a post. Last 28 days planning apps in html || http://www.weymouth.gov.uk/Planning/applications/newapps.asp?svid=212 ||
+|| Done || Weymouth & Portland Borough Council || Weymouth || Custom Scraper Info and post pages can only be accessed by a post || http://www.weymouth.gov.uk/Planning/applications/newapps.asp?svid=212 ||
 ||  || *Wigan Metropolitan Borough Council* || Wigan || searchable by date received || http://kinnear.wigan.gov.uk/planapps/PlanAppsAppSearch.asp ||
 || Done || Wiltshire County Council || Trowbridge || PHP Scraper by Matt || http://www.wiltshireplanningapplications.co.uk/planning_search.aspx ||
 || Done || Winchester City Council || Winchester || PublicAccess || http://win2padmz.winchester.gov.uk/publicaccess/ ||
