Edited wiki page through web user interface.

--- a/wiki/ScraperDevelopment.wiki
+++ b/wiki/ScraperDevelopment.wiki
@@ -1,6 +1,3 @@
-= Need Installing = 
-  * Cairngorms
-  * Calderdale
 
 = Scrapers being worked on =
 
@@ -8,6 +5,7 @@
   * Surrey Heath (Duncan) - AcolNet - The problem here looks like it might be cookie and javascript related.
   * PlanIT (Matt) - Early stages of development of a scraper for PlanIT
   * Flintshire (Duncan)
+  * Winchester(Duncan)
 
 = Scrapers done, but no (or very few) postcodes =
   * Arun
