--- a/wiki/PlanningAuthoritiesW.wiki
+++ b/wiki/PlanningAuthoritiesW.wiki
@@ -28,7 +28,7 @@
 || Done || Weymouth & Portland Borough Council || Weymouth || Custom Scraper Info and post pages can only be accessed by a post || http://www.weymouth.gov.uk/Planning/applications/newapps.asp?svid=212 ||
 ||  || *Wigan Metropolitan Borough Council* || Wigan || searchable by date received || http://kinnear.wigan.gov.uk/planapps/PlanAppsAppSearch.asp ||
 || Done || Wiltshire County Council || Trowbridge || PHP Scraper by Matt || http://www.wiltshireplanningapplications.co.uk/planning_search.aspx ||
-|| Done || Winchester City Council || Winchester || PublicAccess || http://win2padmz.winchester.gov.uk/publicaccess/ ||
+|| Changed || *Winchester City Council* || Winchester || Used to be PublicAccess but now seems to be bespoke. There is a date search available. || http://planningapplications.winchester.gov.uk/PlanningWeb/SearchIndex.aspx (was http://win2padmz.winchester.gov.uk/publicaccess/) ||
 ||  || *Windsor & Maidenhead Borough Council* || Maidenhead, Windsor || PAM - searchable by date. Database appears to be empty || http://www.rbwm.gov.uk/pam/search.jsp ||
 ||  || *Wirral Metropolitan Borough Council* || Wallasey || possible to ignore applications before a date || http://www.wirral.gov.uk/planning/search1.asp ||
 || Done || Woking Borough Council || Woking || PublicAccess || http://caps.woking.gov.uk/publicaccess/ ||
