Edited wiki page through web user interface.

--- a/wiki/PlanningAuthoritiesG.wiki
+++ b/wiki/PlanningAuthoritiesG.wiki
@@ -4,7 +4,7 @@
 || Done || Gloucester City Council || Gloucester || PublicAccess || http://www.glcstrplnng11.co.uk/publicaccess/ ||
 || Done || Gloucestershire County Council || Gloucester || PublicAccess ||  http://www.glcstrplnng11.co.uk/publicaccess/tdc/ ||
 || Done || Gosport Borough Council || Gosport || Custom Scraper || http://www.gosport.gov.uk/gbcplanning/ApplicationSearch2.aspx ||
-|| Done || Gravesham Borough Council || Gravesend || PublicAccess || http://plan.gravesham.gov.uk/PublicAccess/ ||
+|| Broken || Gravesham Borough Council || Gravesend || PublicAccess (As of 31/03/2009 giving an error"There has been a system error. Error message: ORA-12541: TNS:no listener")|| http://plan.gravesham.gov.uk/PublicAccess/ ||
 || Done || Great Yarmouth Borough Council || Great Yarmouth || [Ocella] || http://www.great-yarmouth.gov.uk/planning/development_control/planning_applications/archived_applications_2006.htm ||
 || Done || Greenwich Borough Council || London || Acolnet || http://onlineplanning.greenwich.gov.uk/acolnet/planningpages/acolnetcgi.gov?ACTION=UNWRAP&RIPNAME=Root.pgesearch ||
 || Done || Guildford Borough Council || Guildford || AcolNet || http://www.guildford.gov.uk/DLDC_Version_2/acolnetcgi.exe?ACTION=UNWRAP&RIPNAME=Root.pgesearch ||
