--- a/wiki/PlanningAuthoritiesS.wiki
+++ b/wiki/PlanningAuthoritiesS.wiki
@@ -30,7 +30,7 @@
 || || *South Lanarkshire Council* || East Kilbride, Hamilton, Lanark, Rutherglen || pdf file of recent apps || http://www.southlanarkshire.gov.uk/portal/page/portal/EXTERNAL_WEBSITE_DEVELOPMENT/SLC_ONLINE_HOME/SLC_ATOZ/PUBLICATION_ATOZ/RELATED_PUBLICATION/?keyword1=currentplanningappsdoc ||
 || Done || South Norfolk Council || Long Stratton || PlanningExplorer and [WAM] (but no postcodes) || http://planning.south-norfolk.gov.uk/MVM/Online/PL/GeneralSearch.aspx, http://wam.south-norfolk.gov.uk/WAM/search/pas/index.htm ||
 || Done || South Northamptonshire || Towcester || Like Shropshire. Has OSGB. *(few or no postcodes)* || http://snc.planning-register.co.uk/PlanAppSrch.asp ||
-|| Done || South Oxfordshire District Council || Wallingford || html list by seven day periods - implemented as a special case. || http://www.southoxon.gov.uk/ccm/planning/ApplicationList.jsp ||
+|| Done *(no postcodes)* || South Oxfordshire District Council || Wallingford || html list by seven day periods - implemented as a special case. || http://www.southoxon.gov.uk/ccm/planning/ApplicationList.jsp ||
 || Done || South Ribble Borough Council || Leyland || PublicAccess || http://publicaccess.southribble.gov.uk/publicaccess/ ||
 || Done || South Shropshire District Council || Ludlow || PlanningExplorer (paging in javascript) || http://194.201.44.102/MVM/Online/PL/GeneralSearch.aspx ||
 || Done || South Somerset District Council || Chard, Langport, Wincanton, Yeovil || Perl scraper from Tom || http://www.southsomerset.gov.uk/index.jsp?articleid=1925 ||
