--- a/wiki/PlanningAuthoritiesB.wiki
+++ b/wiki/PlanningAuthoritiesB.wiki
@@ -18,7 +18,7 @@
 || || *Blaenau Gwent* ||Blaenau Gwent County Borough Council || Apps by year in one big PDF || http://www.blaenau-gwent.gov.uk/housing/5698.asp ||
 || || *Blyth Valley* || Blyth Valley Borough Council || weekly lists as pdf, rather out of date || http://www.blythvalley.gov.uk/Default.aspx?page=10932 ||
 || Done || Bolsover || Bolsover District Council || PublicAccess || http://217.158.161.181/publicaccess/tdc/DcApplication/application_searchform.aspx ||
-|| Done || Bolton || Bolton Metropolitan Borough Council || AcolNet || http://www.planning.bolton.gov.uk/DCOnlineV2/acolnetcgi.exe?ACTION=UNWRAP&RIPNAME=Root.pgesearch ||
+|| Broken || Bolton || Bolton Metropolitan Borough Council || AcolNet (but rejecting the dates in the format it asks for, even when filled in by its own javascript...) || http://www.planning.bolton.gov.uk/DCOnlineV2/acolnetcgi.exe?ACTION=UNWRAP&RIPNAME=Root.pgesearch ||
 || Done || Boston || Boston Borough Council || [SwiftLG] || http://195.224.121.199/swiftlg/apas/run/wphappcriteria.display ||
 || || *Bournmouth* || Bournemouth Borough Council || weekly list as pdf || http://www.bournemouth.gov.uk/Residents/Planning_Development/Planning_Applications/Lists/default.asp ||
 || Done || Bracknell Forest || Bracknell Forest Borough Council || PublicAccess - using https || https://my.bracknell-forest.gov.uk/publicaccess/tdc/DcApplication/application_searchform.aspx ||
